# pydmc

./: .coverage  Makefile  README.md  pyproject.toml
pydmc/: __init__.py  exceptions.py  v1.py  v2.py  v3.py
tests/: conftest.py  test_v2.py  test_v3.py  utils.py
